
webdir = $(prefix)/web/apsr

nobase_dist_web_SCRIPTS = definitions_i.php \
                          apsr.css \
                          apsr_functions_i.php \
                          apsr.lib.php \
                          index.php \
                          custom_plot.php \
                          download_archives.php \
                          download_obs.php \
                          plotupdate.php \
                          plotwindow.php \
                          pgwebplot.php \
                          processresult.php \
                          result.php \
                          results.php \
                          oldresults.php \
                          oldresult.php \
                          infowindow.php \
                          infoupdate.php \
                          logheader.php \
                          logwindow.php \
                          machine_status.php \
                          machineupdate.php \
                          observations.php \
                          psr_catalogue.php \
                          gain_reporter.php \
                          gain_update.php \
                          control/client_command.php \
                          control/server_command.php \
                          control/control.php \
                          control/index.php \
                          images/apsr_logo.png \
                          testing/tcs_interface.php \
                          testing/index.php \
                          testing/simulator.php \
                          status/.empty support.html
