
webdir = $(prefix)/web/apsr
webraiddir = $(prefix)/web/raid/apsr

nobase_dist_web_SCRIPTS = definitions_i.php \
                          apsr.css \
                          apsr_functions_i.php \
                          apsr_webpage.lib.php \
                          apsr.lib.php \
                          index.php \
                          control.lib.php \
                          config_edit.lib.php \
                          custom_plot.php \
                          custom_plot.lib.php \
                          download_archives.php \
                          download_obs.php \
                          gains.lib.php \
                          ganglia_window.lib.php \
                          log_list.lib.php \
                          log_viewer.php \
                          machine_summary.lib.php \
                          plotupdate.php \
                          plotwindow.php \
                          pgwebplot.php \
                          processresult.php \
                          process_obs.lib.php \
                          observation_summary.lib.php \
                          oldresults.php \
                          oldresult.php \
                          plot_window.lib.php \
                          result.php \
                          result.lib.php \
                          results.php \
                          results.lib.php \
                          state_banner.lib.php \
                          infowindow.php \
                          infoupdate.php \
                          logheader.php \
                          logwindow.php \
                          machine_status.php \
                          machineupdate.php \
                          observations.php \
                          psr_catalogue.php \
                          gain_reporter.php \
                          gain_update.php \
                          tcs_simulator.lib.php \
                          control/client_command.php \
                          control/server_command.php \
                          control/control.php \
                          control/index.php \
                          images/apsr_logo.png \
                          images/apsr_background_5x400.png \
                          images/apsr_background_5x5.png \
                          images/apsr_favico.ico \
                          testing/tcs_interface.php \
                          testing/index.php \
                          testing/simulator.php \
                          status/.empty \
                          support.lib.php

nobase_dist_webraid_SCRIPTS = apsr.css \
                           apsr.lib.php \
                           apsr_webpage.lib.php \
                           raid_archival.lib.php \
                           images/arrow_right.png \
                           images/apsr_favico.ico \
                           images/apsr_logo.png

