
# scripts distributed as is (installed in share/)
dist_data_DATA = bpsr.cfg \
                 bpsr.info \
                 bpsr.viewer \
                 bpsr_pwcs.cfg \
                 ibob_default.cfg \
                 ibob.cfg \
                 THEDECIMATOR \
                 bpsr.scratch \
                 DSPSR.CAL \
                 dspsr.testobs

nobase_dist_data_DATA = testing/BPSR_CAL.spec \
                        testing/BPSR.spec \
                        testing/BPSR_dspsr.spec

include $(top_srcdir)/config/Makefile.targets

