
# scripts distributed as is (installed in share/)
dist_data_DATA = bpsr.cfg \
                 bpsr.info \
                 bpsr.viewer \
                 bpsr_pwcs.cfg \
                 ibob_default.cfg \
                 ibob.cfg \
                 roach.cfg \
                 THEDECIMATOR \
                 bpsr.scratch \
                 DSPSR.CAL \
                 dspsr.testobs \
                 bpsr_128ch_128us_1b \
                 bpsr_128ch_256us_1b \
                 bpsr_128ch_512us_1b \
                 bpsr_128ch_64us_1b \
                 bpsr_256ch_128us_1b \
                 bpsr_256ch_64us_1b


include $(top_srcdir)/config/Makefile.targets

