
# scripts distributed as is (installed in bin/)
dist_bin_SCRIPTS = Bpsr.pm \
                   bpsr_reconfigure.pl \
                   server_bpsr_tcs_interface.pl \
                   server_bpsr_results_manager.pl \
                   server_ibob_simulator.pl \
                   server_bpsr_multibob_manager.pl \
                   server_bpsr_pwc_monitor.pl \
                   server_bpsr_src_monitor.pl \
                   server_bpsr_sys_monitor.pl \
                   server_bpsr_transfer_manager.pl \
                   server_bpsr_tape_archiver.pl \
                   client_bpsr_master_control.pl \
                   client_bpsr_command.pl \
                   client_bpsr_observation_manager.pl \
                   client_bpsr_results_monitor.pl \
                   client_ibob_level_setter.pl \
                   client_bpsr_src_logger.pl \
                   ibob_interface.pl
