
# scripts distributed as is (installed in bin/)
dist_bin_SCRIPTS = Bpsr.pm \
                   Bpsr.py \
                   bpsr_reconfigure.pl \
                   bpsr_hard_reset.pl \
                   median_smooth.py \
                   server_bpsr_bookkeeping_archiver.pl \
                   server_bpsr_tcs_interface.pl \
                   server_bpsr_results_manager.pl \
                   server_ibob_simulator.pl \
                   server_bpsr_ibob_emulator.py \
                   server_bpsr_multibob_manager.pl \
                   server_bpsr_pwc_monitor.pl \
                   server_bpsr_src_monitor.pl \
                   server_bpsr_sys_monitor.pl \
                   server_bpsr_transfer_manager.pl \
                   server_bpsr_tape_archiver.pl \
                   server_bpsr_parkes_tape_controller.pl \
                   server_bpsr_raid_pipeline.pl \
                   server_bpsr_rfi_masker.pl \
                   server_bpsr_roach_manager.py \
                   server_bpsr_swin_tape_controller.pl \
                   server_bpsr_server_logger.pl \
                   server_bpsr_web_monitor.pl \
                   client_bpsr_disk_cleaner.pl \
                   client_bpsr_master_control.pl \
                   client_bpsr_command.pl \
                   client_bpsr_observation_manager.pl \
                   client_bpsr_results_monitor.pl \
                   client_ibob_level_setter.pl \
                   client_bpsr_src_logger.pl \
                   client_bpsr_transfer_raid.pl \
                   raid_bpsr_archiver.pl \
                   raid_bpsr_beams_finished.pl \
                   raid_bpsr_cleaner.pl \
                   raid_bpsr_swin_transferrer.pl \
                   web_observations_helper.pl \
                   web_results_helper.pl \
                   ibob_interface.pl \
                   web_style.txt \
                   merge_tcs_logs.csh \
                   beam-o-vision_collect.csh bpsr_single.csh bpsr_move.csh bpsr_delete.csh

include $(top_srcdir)/config/Makefile.targets

