
# scripts distributed as is (installed in bin/)
dist_bin_SCRIPTS = Bpsr.pm \
                   Bpsr.py \
                   bpsr_reconfigure.pl \
                   bpsr_hard_reset.pl \
                   eq2gal.py \
                   median_smooth.py \
                   dualpol.py \
                   fullpol.py \
                   merge_tcs_logs.csh \
                   server_bpsr_bookkeeping_archiver.pl \
                   server_bpsr_tcs_interface.pl \
                   server_bpsr_results_manager.pl \
                   server_ibob_simulator.pl \
                   server_bpsr_frb_manager.pl \
                   server_bpsr_ibob_emulator.py \
                   server_bpsr_multibob_manager.pl \
                   server_bpsr_pwc_monitor.pl \
                   server_bpsr_src_monitor.pl \
                   server_bpsr_sys_monitor.pl \
                   server_bpsr_transfer_manager.pl \
                   server_bpsr_tape_archiver.pl \
                   server_bpsr_parkes_tape_controller.pl \
                   server_bpsr_raid_pipeline.pl \
                   server_bpsr_rfi_masker.pl \
                   server_bpsr_roach_manager.py \
                   server_bpsr_swin_tape_controller.pl \
                   server_bpsr_server_logger.pl \
                   server_bpsr_web_monitor.pl \
                   client_bpsr_auxiliary.pl \
                   client_bpsr_disk_cleaner.pl \
                   client_bpsr_clean_send.pl \
                   client_bpsr_clean_recv.pl \
                   client_bpsr_svd.pl \
                   client_bpsr_dirty_send.pl \
                   client_bpsr_dirty_recv.pl \
                   client_bpsr_dumper.pl \
                   client_bpsr_events.pl \
                   client_bpsr_heimdall.pl \
                   client_bpsr_master_control.pl \
                   client_bpsr_command.pl \
                   client_bpsr_observation_manager.pl \
                   client_bpsr_results_monitor.pl \
                   client_bpsr_pscrunch.pl \
                   client_ibob_level_setter.pl \
                   client_bpsr_proc.pl \
                   client_bpsr_pwc.pl \
                   client_bpsr_src_logger.pl \
                   client_bpsr_svd_master_control.pl \
                   client_bpsr_transfer_raid.pl \
                   raid_bpsr_archiver.pl \
                   raid_bpsr_beams_finished.pl \
                   raid_bpsr_cleaner.pl \
                   raid_bpsr_reporter.pl \
                   raid_bpsr_swin_transferrer.pl \
                   web_observations_helper.pl \
                   web_results_helper.pl \
                   ibob_interface.pl \
                   web_style.txt \
                   merge_tcs_logs.csh \
                   beam-o-vision_collect.csh bpsr_single.csh bpsr_move.csh bpsr_delete.csh

include $(top_srcdir)/config/Makefile.targets

