
webdir = $(prefix)/web/bpsr

nobase_dist_web_SCRIPTS = definitions_i.php \
                          bpsr_functions_i.php \
                          plotupdate.php \
                          plotwindow.php \
                          beamwindow.php \
                          result.php \
                          results.php \
                          infowindow.php \
                          infoupdate.php \
                          images/bandpass_1024x768.png \
                          images/bandpass_240x180.png \
                          images/digitizer_1024x768.png \
                          images/digitizer_240x180.png \
                          images/dm0timeseries_1024x768.png \
                          images/dm0timeseries_240x180.png \
                          images/powerspectrum_1024x768.png \
                          images/powerspectrum_240x180.png \
                          testing/configuration.php \
                          testing/display_text_file.php \
                          testing/index.php \
                          testing/simulator.php

