
webdir = $(prefix)/web/bpsr

nobase_dist_web_SCRIPTS = definitions_i.php \
                          archives.php \
                          bpsr_functions_i.php \
                          plotupdate.php \
                          plotwindow.php \
                          plotwindow_large.php \
                          beamwindow.php \
                          result.php \
                          results.php \
                          index.php \
                          infowindow.php \
                          infoupdate.php \
                          logheader.php \
                          logwindow.php \
                          tapewindow.php \
                          tapeupdate.php \
                          images/bandpass_1024x768.png \
                          images/bandpass_240x180.png \
                          images/digitizer_1024x768.png \
                          images/digitizer_240x180.png \
                          images/dm0timeseries_1024x768.png \
                          images/dm0timeseries_240x180.png \
                          images/powerspectrum_1024x768.png \
                          images/powerspectrum_240x180.png \
                          testing/configuration.php \
                          testing/display_text_file.php \
                          testing/index.php \
                          testing/simulator.php \
                          control/client_command.php \
                          control/control.php \
                          control/index.php \
                          control/server_command.php \
                          stats/.htaccess \
                          status/.empty

