
webdir = $(prefix)/web/bpsr

nobase_dist_web_SCRIPTS = definitions_i.php \
                          archival_summary_window.lib.php \
                          archival.lib.php \
                          backend_state_window.lib.php \
                          beam_config.lib.php \
                          beam_config.php \
                          beam_reconfig.php \
                          beamovision.lib.php \
                          bpsr_functions_i.php \
                          beam_viewer.lib.php \
                          bpsr.css \
                          bpsr.lib.php \
                          bpsr_webpage.lib.php \
                          state_banner.lib.php \
                          control.lib.php \
                          current_obs_window.lib.php \
                          machine_summary.lib.php \
                          result.lib.php \
                          results.lib.php \
                          index.php \
                          ganglia_window.lib.php \
                          log_list.lib.php \
                          log_viewer.php \
                          old_results.lib.php \
                          plot_window.lib.php \
                          images/bpsr_favico.ico \
                          images/bpsr_logo_1x60.png \
                          images/bpsr_logo.png \
                          images/arrow_south_50x30.png \
                          images/arrow_southeast_50x50.png \
                          images/arrow_southwest_50x50.png \
                          images/bpsr_beam_disabled_240x180.png \
                          tcs_simulator.lib.php \
                          stats/.htaccess \
                          status/.empty \
                          support.html

