
# scripts distributed as is (installed in share/)
data_DATA = caspsr.cfg \
            caspsr.dbnull \
            caspsr.dbdisk \
            caspsr.viewer \
            dspsr.gpu \
            dspsr.nosk \
            dspsr.50cmgpu \
            dspsr.50cmnosk\
            dspsr.cpu \
            caspsr.receiving \
            caspsr.processing

include $(top_srcdir)/config/Makefile.targets

EXTRA_DIST=caspsr.cfg \
	   caspsr.dbnull \
	   caspsr.dbdisk \
	   caspsr.viewer

