
# scripts distributed as is (installed in bin/)
dist_bin_SCRIPTS = Caspsr.pm \
                   caspsr_reconfigure.pl \
                   caspsr_hard_reset.pl \
                   client_caspsr_archive_manager.pl \
                   client_caspsr_disk_cleaner.pl \
                   client_caspsr_master_control.pl \
                   client_caspsr_distrib_manager.pl \
                   client_caspsr_demux_manager.pl \
                   client_caspsr_processing_manager.pl \
                   client_caspsr_src_logger.pl \
                   client_caspsr_sys_logger.pl \
                   client_caspsr_command.pl \
                   raid_caspsr_baseband_recorder.pl \
                   raid_caspsr_swin_transferrer.pl \
                   raid_caspsr_psrfits_converter.pl \
                   server_caspsr_baseband_controller.pl \
                   server_caspsr_sys_monitor.pl \
                   server_caspsr_demux_monitor.pl \
                   server_caspsr_distrib_monitor.pl \
                   server_caspsr_pwc_monitor.pl \
                   server_caspsr_raid_pipeline.pl \
                   server_caspsr_results_manager.pl \
                   server_caspsr_tcs_interface.pl \
                   server_caspsr_transfer_manager.pl \
                   server_caspsr_web_monitor.pl \
                   zap.psh

include $(top_srcdir)/config/Makefile.targets

