
webdir = $(prefix)/web/caspsr
webraiddir = $(prefix)/web/raid/caspsr

nobase_dist_web_SCRIPTS = admin.lib.php \
                          archival.lib.php \
                          archival_summary.lib.php \
                          buttons.css \
                          index.php \
                          caspsr.css \
                          caspsr.lib.php \
                          caspsr_webpage.lib.php \
                          custom_plot.lib.php \
                          definitions_i.php \
                          download.lib.php \
                          ganglia_window.lib.php \
                          log_viewer.php \
                          log_list.lib.php \
                          machine_summary.lib.php \
                          current_observation.lib.php \
                          parkes_webcam.lib.php \
                          pgwebplot.php \
                          plot_window.lib.php \
                          process_obs.lib.php \
                          result.lib.php \
                          results.lib.php \
                          state_update.lib.php \
                          support.lib.php \
                          control.lib.php \
                          header_index.php \
                          tcs_simulator.lib.php \
                          images/caspsr_favicon.ico \
                          images/caspsr_logo_480x60.png \
                          images/caspsr_logo_200x60.png \
                          images/caspsr_logo_1x60.png \
                          images/caspsr_logo.png \
                          Arty/Arty.css \
                          Arty/BlockContentBullets.png \
                          Arty/Block-c.png \
                          Arty/BlockHeader.png \
                          Arty/Block-h.png \
                          Arty/Block-s.png \
                          Arty/Block-v.png \
                          Arty/Button.png \
                          Arty/Footer.png \
                          Arty/Header.png \
                          Arty/item-center.png \
                          Arty/item-left.png \
                          Arty/item-right.png \
                          Arty/nav.png \
                          Arty/PostBullets.png \
                          Arty/Post-c.png \
                          Arty/Post-h.png \
                          Arty/PostQuote.png \
                          Arty/Post-s.png \
                          Arty/Post-v.png \
                          Arty/rssIcon.png \
                          Arty/Sheet-c.png \
                          Arty/Sheet-h.png \
                          Arty/Sheet-s.png \
                          Arty/Sheet-v.png \
                          Arty/subitem-bg.png \
                          Arty/Page-BgSimpleGradient.jpg \
                          Arty/BlockHeader_1900x30.png \
                          Arty/Page-BgSimpleGradient_500x5.jpg

nobase_dist_webraid_SCRIPTS = caspsr.css \
                           caspsr.lib.php \
                           caspsr_webpage.lib.php \
                           raid_archival.lib.php \
                           images/arrow_right.png \
                           images/caspsr_favicon.ico \
                           images/caspsr_logo.png \
                           Arty/Arty.css \
                           Arty/BlockContentBullets.png \
                           Arty/Block-c.png \
                           Arty/BlockHeader.png \
                           Arty/Block-h.png \
                           Arty/Block-s.png \
                           Arty/Block-v.png \
                           Arty/Button.png \
                           Arty/Footer.png \
                           Arty/Header.png \
                           Arty/item-center.png \
                           Arty/item-left.png \
                           Arty/item-right.png \
                           Arty/nav.png \
                           Arty/PostBullets.png \
                           Arty/Post-c.png \
                           Arty/Post-h.png \
                           Arty/PostQuote.png \
                           Arty/Post-s.png \
                           Arty/Post-v.png \
                           Arty/rssIcon.png \
                           Arty/Sheet-c.png \
                           Arty/Sheet-h.png \
                           Arty/Sheet-s.png \
                           Arty/Sheet-v.png \
                           Arty/subitem-bg.png \
                           Arty/Page-BgSimpleGradient.jpg \
                           Arty/BlockHeader_1900x30.png \
                           Arty/Page-BgSimpleGradient_500x5.jpg



include $(top_srcdir)/config/Makefile.targets

