
# scripts distributed as is (installed in bin/)
dist_bin_SCRIPTS = Hispec.pm \
                   Hispec.py \
                   server_hispec_tcs_interface.pl \
                   server_hispec_pwc_monitor.pl \
                   server_hispec_src_monitor.pl \
                   server_hispec_sys_monitor.pl \
                   server_hispec_results_manager.pl \
                   server_hispec_roach_manager.py \
                   server_hispec_server_logger.pl \
                   server_hispec_web_monitor.pl \
                   client_hispec_master_control.pl \
                   client_hispec_observation_manager.pl \
                   client_hispec_results_monitor.pl \
                   client_hispec_src_logger.pl

include $(top_srcdir)/config/Makefile.targets

