
webdir = $(prefix)/web/hispec

nobase_dist_web_SCRIPTS = beam_viewer.lib.php \
                          control.lib.php \
                          current_obs_window.lib.php \
                          ganglia_window.lib.php \
                          hispec.css \
                          hispec.lib.php \
                          hispec_webpage.lib.php \
                          index.php \
                          log_list.lib.php \
                          log_viewer.php \
                          machine_summary.lib.php \
                          plot_window.lib.php \
                          state_banner.lib.php \
                          tcs_simulator.lib.php \
                          images/hispec_beam_disabled_240x180.png
