
# scripts distributed as is (installed in share/)
dist_data_DATA = mopsr.cfg \
                 mopsr.2ant_128chan.header \
								 mopsr.dspsr.cpu \
								 mopsr.dspsr.gpu \
                 mopsr.dspsr.cpu.sk \
                 mopsr.dspsr.cpu.tied \
								 mopsr.null \
								 TOA_ERR_GT_0.select

include $(top_srcdir)/config/Makefile.targets

