
# scripts distributed as is (installed in share/)
dist_data_DATA = mopsr.cfg \
                 mopsr.2ant_128chan.header \
								 mopsr_2kbins_25s.dspsr.cpu \
								 mopsr.dspsr.cpu \
								 mopsr.dspsr.gpu \
                 mopsr.dspsr.cpu.sk \
                 mopsr.dspsr.cpu.tied \
								 mopsr.null \
								 mysql-config.php \
								 obs.corr_header_params.only_common \
								 obs.fb_header_params.only_common \
								 obs.info_params.only_common \
								 obs.mb_header_params.only_common \
								 obs.tb_header_params.only_common \
								 TOA_ERR_GT_0.select

include $(top_srcdir)/config/Makefile.targets

