
# scripts distributed as is (installed in bin/)
dist_bin_SCRIPTS = Mopsr.pm \
									 Mopsr.py \
                   auxiliary_plotter.py \
                   last_60s_snr.psh \
                   power_mon.psh \
                   power_mon20.psh \
                   power_mon8.psh \
                   server_mopsr_bf_src_monitor.pl \
                   server_mopsr_bf_sys_monitor.pl \
                   server_mopsr_event_monitor.pl \
                   server_mopsr_ib_receiver.pl \
                   server_mopsr_baseband_logger.pl \
                   server_mopsr_results_manager.pl \
                   server_mopsr_results_manager_tb.pl \
                   server_mopsr_tmc_interface.pl \
                   server_mopsr_pwc_monitor.pl \
                   server_mopsr_src_monitor.pl \
                   server_mopsr_sys_monitor.pl \
                   server_mopsr_web_monitor.pl \
                   sn_mods.py \
                   client_mopsr_aqdsp.pl \
                   client_mopsr_aq_diskdb.pl \
									 client_mopsr_dbsplitdb.pl \
                   client_mopsr_dbantsdb.pl \
                   client_mopsr_dumper.pl \
									 client_mopsr_dspsr.pl \
                   client_mopsr_master_control.pl \
								   client_mopsr_bf_archive_manager.pl \
                   client_mopsr_bf_master_control.pl \
                   client_mopsr_bf_process.pl \
                   client_mopsr_bf_src_logger.pl \
                   client_mopsr_bf_results_mon.pl \
                   client_mopsr_bf_transpose.pl \
                   client_mopsr_archive_manager.pl \
                   client_mopsr_mux_send.pl \
                   client_mopsr_mux_recv.pl \
                   client_mopsr_proc.pl \
                   client_mopsr_results_monitor.pl \
                   client_mopsr_observation_manager.pl \
                   client_mopsr_superb.pl \
                   client_mopsr_pwc.pl \
                   client_mopsr_aqdsp_observation_manager.pl \
                   client_mopsr_src_logger.pl

include $(top_srcdir)/config/Makefile.targets

